# trains-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: Carriage.h  CarriageType.h  CoveredFreightCarriage.h  DieselLocomotive.h  ElectricLocomotive.h  FileParser.h  Locomotive.h  LocomotiveType.h  OpenFreightCarriage.h  SeatCarriage.h  Simulation.h  SleepingCarriage.h  Station.h  Track.h  Train.h  VehicleEscrow.h  VehicleTypeUtils.h
include/events/: ArriveEvent.h  AssembleEvent.h  DepartEvent.h  Event.h  FinishEvent.h  ReadyEvent.h
src/: FileParser.cpp  Simulation.cpp  Station.cpp  Train.cpp  main.cpp
tests/: fileParser_test.cpp  station_test.cpp  track_test.cpp  train_test.cpp  vehicleEscrow_test.cpp  vehicleTypeUtils_test.cpp
